kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  # type: LoadBalancer
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      # nodePort: 30100
