kubernetes/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: flask-app-ingress
#   # annotations:
#   #   kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#     - host: try.ingress.dev2.testclustr.shoot.canary.k8s-hana.ondemand.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: flask-app-service
#                 port:
#                   number: 5000


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert.gardener.cloud/purpose: managed
spec:
  tls:
  - hosts:
    - try.ingress.dev2.testclustr.shoot.canary.k8s-hana.ondemand.com
    secretName: tls-secret
  rules:
    - host: try.ingress.dev2.testclustr.shoot.canary.k8s-hana.ondemand.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-service
                port:
                  number: 5000
